--- a/app/src/main/res/drawable/brown_gradient.xml
+++ b/app/src/main/res/drawable/brown_gradient.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#2B1808"
+        android:startColor="?attr/colorSecondary"
         android:endColor="?attr/colorPrimary"
         android:angle="90"/>
 </shape>
