--- a/app/src/main/res/layout/activity_favorite_detail.xml
+++ b/app/src/main/res/layout/activity_favorite_detail.xml
@@ -219,7 +219,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#E10909"
-            android:text="ĐELETE"
+            android:text="DELETE"
             android:textColor="#FFFFFF"
             app:cornerRadius="20dp"
             tools:ignore="TextContrastCheck" />
