--- a/app/src/main/res/layout/activity_manga_detail.xml
+++ b/app/src/main/res/layout/activity_manga_detail.xml
@@ -76,6 +76,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
                 android:text="Author:"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <TextView
@@ -84,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="Status:"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <TextView
@@ -92,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:text="Chapters:"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <TextView
@@ -99,11 +102,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginBottom="10dp"
                 android:autoSizeTextType="uniform"
                 android:text="Likes:"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txt5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="Genres:"
+                android:textColor="@color/white"
                 android:textSize="16sp"
-                tools:ignore="UnusedAttribute" />
+                tools:ignore="UnusedAttribute"/>
         </LinearLayout>
 
         <LinearLayout
@@ -129,6 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:text="In progress"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
             <TextView
@@ -144,6 +157,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
+                android:textColor="@color/white"
+                android:textSize="16sp" />
+            <TextView
+                android:id="@+id/txtGenres"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
         </LinearLayout>
