--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#88b4fc</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -12,6 +13,7 @@
     <color name="bg_grey">#FFf1f1f1</color>
     <color name="brown">#FF5E3511</color>
     <color name="gray">#808080</color>
+    <color name="light_red">#FF7F7F</color>
 
     <color name="night_mode">#6124B1</color>
     <color name="notifications">#13B2C3</color>
