--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -4,19 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
-    android:layout_marginStart="20dp"
     android:orientation="vertical"
-    android:layout_marginEnd="20dp"
+    android:background="@color/bg_grey"
     tools:context=".SettingPackage.SubscriptionActivity">
 
     <TextView
         android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="Your current plan: Standard"
+        android:textSize="20sp"
         android:layout_height="wrap_content"/>
 
     <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/light_red"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         app:cardCornerRadius="7dp"
@@ -29,10 +32,10 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="Standard plan"
+                android:text=" Standard plan"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:background="@color/blue_btn_bg_color"
+                android:background="@color/gray"
                 android:layout_height="wrap_content"/>
 
             <TextView
@@ -54,7 +57,8 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        app:cardBackgroundColor="@color/colorPrimary"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         app:cardCornerRadius="7dp"
@@ -67,10 +71,10 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="VIP plan"
+                android:text=" VIP plan"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:background="@drawable/green_button_background"
+                android:background="@drawable/blue_gradient"
                 android:layout_height="wrap_content"/>
 
             <TextView
@@ -90,5 +94,28 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"
+        android:text="Get you VIP plan now:"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_height="wrap_content" >
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" >
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </LinearLayout>
