--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="brown">#FF5E3511</color>
     <color name="gray">#808080</color>
     <color name="light_red">#FF7F7F</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="light_yellow">#FFFFED</color>
+    <color name="gold">#FFD700</color>
 
     <color name="night_mode">#6124B1</color>
     <color name="notifications">#13B2C3</color>
