--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -53,7 +53,7 @@
 
 
                 <TextView
-                    android:id="@+id/voucher_button"
+                    android:id="@+id/coinTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="bottom|center"
