--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -14,6 +14,7 @@
         android:gravity="center">
 
         <EditText
+            android:id="@+id/searchEditText"
             android:background="@drawable/bg_edittext"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
