--- a/app/src/main/res/layout/item_search_comic_view.xml
+++ b/app/src/main/res/layout/item_search_comic_view.xml
@@ -27,7 +27,7 @@
     <TextView
         android:id="@+id/name_comic"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="5dp"
         android:gravity="center"
         android:text="Tên truyện tranh"
