--- a/app/src/main/res/layout/chapter_items.xml
+++ b/app/src/main/res/layout/chapter_items.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="5dp">
 
             <ImageView
                 android:id="@+id/ivChapter"
@@ -37,7 +37,8 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="Chapter 1"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
