--- a/app/src/main/res/layout/manga_items.xml
+++ b/app/src/main/res/layout/manga_items.xml
@@ -19,26 +19,67 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="0dp">
 
-            <ImageView
-                android:id="@+id/ivManga"
-                android:layout_width="200dp"
-                android:layout_height="90dp"
-                android:scaleType="centerCrop"
-                />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/ivManga"
+                    android:layout_width="120dp"
+                    android:layout_height="150dp"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:id="@+id/tvChap"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#555353"
+                    android:text="Chap"
+                    android:textColor="#FFFFFF"
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    />
+            </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
-            android:text='Overflow'
-            android:textSize="20sp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:text='Tên tác phẩm'
+                android:textSize="22sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/tvAuthor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text='Tên tác giả'
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvGenres"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text='Thể loại'
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
