--- a/app/src/main/res/layout/activity_manga_reader.xml
+++ b/app/src/main/res/layout/activity_manga_reader.xml
@@ -56,10 +56,10 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:backgroundTint="#FF9800"
+            android:backgroundTint="#0FA316"
             android:text="Previous"
             android:textColor="#FFFFFF"
-            app:cornerRadius="20dp" />
+            app:cornerRadius="10dp" />
         <Button
             android:id="@+id/b2"
             style="?android:attr/buttonBarButtonStyle"
@@ -71,7 +71,7 @@
             android:backgroundTint="#29B6F6"
             android:text="Chapter"
             android:textColor="#FFFFFF"
-            app:cornerRadius="20dp" />
+            app:cornerRadius="10dp" />
         <Button
             android:id="@+id/b3"
             style="?android:attr/buttonBarButtonStyle"
@@ -80,10 +80,10 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:backgroundTint="#EC407A"
+            android:backgroundTint="#0FA316"
             android:text="next"
             android:textColor="#FFFFFF"
-            app:cornerRadius="20dp"
+            app:cornerRadius="10dp"
             tools:ignore="TextContrastCheck" />
     </LinearLayout>
 
