--- a/app/src/main/res/layout/genre_list.xml
+++ b/app/src/main/res/layout/genre_list.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".MainActivityPackage.SearchFragment">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,36 +10,35 @@
         android:background="#363F44"
         android:gravity="center">
 
-        <EditText
-            android:id="@+id/searchEditText"
-            android:background="@drawable/bg_edittext"
+        <TextView
+            android:id="@+id/searchByGenreText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="80dp"
-            android:hint="Nhập tên truyện"
+            android:hint="Bộ lọc truyện"
             android:textColorHint="#B3ADAD"
             android:gravity="center"
             android:textColor="#fff"/>
 
         <ImageButton
-            android:id="@+id/filterButton"
+            android:id="@+id/ok_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:scaleType="centerCrop"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/filter_icon"
-            android:background="?android:attr/selectableItemBackground"
+
             android:padding="10dp"
             android:contentDescription="Lọc"
             android:layout_marginRight="10dp"/>
     </RelativeLayout>
-    <GridView
-        android:id="@+id/gdvComicList"
+
+    <ListView
+        android:id="@+id/genreListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="3"></GridView>
+        android:layout_height="match_parent" />
 </LinearLayout>
