--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -44,5 +44,6 @@
         android:id="@+id/gdvComicList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
         android:numColumns="3"></GridView>
 </LinearLayout>
