--- a/app/src/main/res/layout/item_search_comic_view.xml
+++ b/app/src/main/res/layout/item_search_comic_view.xml
@@ -9,7 +9,6 @@
         android:layout_height="180dp">
         <ImageView
             android:id="@+id/img_comic"
-            android:src="@drawable/naruto_image"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
@@ -32,6 +31,6 @@
         android:gravity="center"
         android:text="Tên truyện tranh"
         android:textSize="14dp"
-        android:textColor="#000"/>
+        android:layout_marginBottom="5dp"/>
 
 </LinearLayout>
