--- a/app/src/main/res/layout/chapter_items.xml
+++ b/app/src/main/res/layout/chapter_items.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/freeText"
+        app:layout_constraintEnd_toStartOf="@+id/buttonPurchase"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -42,14 +42,15 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/freeText"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/buttonPurchase"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="5dp"
         android:text="Free"
-        android:textSize="16sp" />
+        android:textSize="10sp"
+        android:backgroundTint="#33AFE8" />
 
 </RelativeLayout>
