--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="notifications">#13B2C3</color>
     <color name="security">#F9A825</color>
     <color name="settings">#FF2bb971</color>
+
+    <color name="light_pink">#e3dff8</color>
 </resources>
