--- a/app/src/main/res/layout/activity_buying_sub.xml
+++ b/app/src/main/res/layout/activity_buying_sub.xml
@@ -33,7 +33,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Date"
+                    android:text="@string/date_buying_coin"
                     android:textSize="20sp" />
 
                 <TextView
@@ -58,7 +58,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Price per day"
+                    android:text="@string/price_per_day_buying_sub"
                     android:textSize="20sp" />
 
                 <TextView
@@ -83,7 +83,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="VIP duration"
+                    android:text="@string/vip_duration_buying_sub"
                     android:textSize="20sp" />
 
                 <TextView
@@ -110,7 +110,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Money saved (from buy per month)"
+                    android:text="@string/money_saved_buying_sub"
                     android:textSize="16sp" />
 
                 <TextView
@@ -136,7 +136,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Coin"
+                    android:text="@string/coin"
                     android:textSize="20sp" />
 
                 <TextView
@@ -162,7 +162,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Expired date"
+                    android:text="@string/expired_date_buying_sub"
                     android:textSize="20sp" />
 
                 <TextView
@@ -189,7 +189,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total"
+                    android:text="@string/total"
                     android:textSize="20sp" />
 
                 <TextView
@@ -226,7 +226,7 @@
         android:fontFamily="@font/alegreysan"
         android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/main_blue_color"
-        android:text="PAY WITH ZALOPAY" />
+        android:text="@string/zalopay_button" />
 
 
 </LinearLayout>
