--- a/app/src/main/res/layout/activity_manga_detail.xml
+++ b/app/src/main/res/layout/activity_manga_detail.xml
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:text="Author:"
+                android:text="@string/author"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -79,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Status:"
+                android:text="@string/status"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -88,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:text="Chapters:"
+                android:text="@string/chapters"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
 
@@ -98,7 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:autoSizeTextType="uniform"
-                android:text="Likes:"
+                android:text="@string/likes"
                 android:textColor="@color/white"
                 android:textSize="16sp" />
             <TextView
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="10dp"
-                android:text="Genres:"
+                android:text="@string/genres"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 tools:ignore="UnusedAttribute"/>
@@ -208,7 +208,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#29B6F6"
-            android:text="CHAPTER"
+            android:text="@string/chapter"
             android:textColor="#FFFFFF"
             app:cornerRadius="10dp" />
 
@@ -221,7 +221,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#FF9800"
-            android:text="READ"
+            android:text="@string/read"
             android:textColor="#FFFFFF"
             app:cornerRadius="10dp" />
 
@@ -234,7 +234,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#EC407A"
-            android:text="FAVORITE"
+            android:text="@string/favorite"
             android:textColor="#FFFFFF"
             app:cornerRadius="10dp"
             tools:ignore="TextContrastCheck" />
