--- a/app/src/main/res/layout/activity_manga_reader.xml
+++ b/app/src/main/res/layout/activity_manga_reader.xml
@@ -57,7 +57,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#0FA316"
-            android:text="Previous"
+            android:text="@string/previous"
             android:textColor="#FFFFFF"
             app:cornerRadius="10dp" />
         <Button
@@ -69,7 +69,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#29B6F6"
-            android:text="Chapter"
+            android:text="@string/chapter"
             android:textColor="#FFFFFF"
             app:cornerRadius="10dp" />
         <Button
@@ -81,7 +81,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
             android:backgroundTint="#0FA316"
-            android:text="next"
+            android:text="@string/next"
             android:textColor="#FFFFFF"
             app:cornerRadius="10dp"
             tools:ignore="TextContrastCheck" />
