--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -33,7 +33,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text=" Standard plan"
+                android:text="@string/standard_plan"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:background="@color/gray"
@@ -41,7 +41,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:text="Free"
+                android:text="@string/free"
                 android:textSize="20sp"
                 android:layout_height="wrap_content"/>
             <View
@@ -50,7 +50,7 @@
                 android:background="@color/black"/>
             <TextView
                 android:layout_width="match_parent"
-                android:text="Access to most of the manga. \n With ads. \n There are some series that are not available and require coin to unlock. \n Does not get free coins daily."
+                android:text="@string/describe_free_plan"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
@@ -90,7 +90,7 @@
                 android:background="@color/black"/>
             <TextView
                 android:layout_width="match_parent"
-                android:text="Access to all manga. \n No ads. \n Get free coin daily."
+                android:text="@string/describe_vip_plan"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
@@ -102,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"
-        android:text="Get you VIP plan now:"
+        android:text="@string/buy_vip"
         android:layout_height="wrap_content" />
 
     <LinearLayout
@@ -128,13 +128,13 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:text=" 30 days"
+                    android:text="@string/_30_days"
                     android:textSize="20sp"
-                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                     android:textStyle="bold"
-                    android:drawableStart="@drawable/vip_icon"
                     android:background="@drawable/blue_gradient"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
+                    app:drawableStartCompat="@drawable/vip_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -147,7 +147,7 @@
                     android:background="@color/black"/>
                 <TextView
                     android:layout_width="match_parent"
-                    android:text="1000 VND/day \n Get 10 coins instantly \n Get 3 coins daily"
+                    android:text="@string/coin_30_days"
                     android:layout_height="wrap_content"/>
 
             </LinearLayout>
@@ -170,13 +170,13 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:text=" 90 days"
-                    android:drawableStart="@drawable/vip_icon"
+                    android:text="@string/_90_days"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                     android:background="@drawable/blue_gradient"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    app:drawableStartCompat="@drawable/vip_icon"
+                    app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -189,7 +189,7 @@
                     android:background="@color/black"/>
                 <TextView
                     android:layout_width="match_parent"
-                    android:text="888 VND/day \n Get 15 coins instantly \n Get 4 coins daily"
+                    android:text="@string/coin_90_days"
                     android:layout_height="wrap_content"/>
 
             </LinearLayout>
@@ -221,13 +221,13 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:text=" 180 days"
+                    android:text="@string/_180_days"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:background="@drawable/blue_gradient"
-                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
-                    android:drawableStart="@drawable/vip_icon"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
+                    app:drawableStartCompat="@drawable/vip_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -240,7 +240,7 @@
                     android:background="@color/black"/>
                 <TextView
                     android:layout_width="match_parent"
-                    android:text="850 VND/day \n Get 40 coins instantly \n Get 5 coins daily"
+                    android:text="@string/coin_180_days"
                     android:layout_height="wrap_content"/>
 
             </LinearLayout>
@@ -263,13 +263,13 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:text=" 360 days"
-                    android:drawableStart="@drawable/vip_icon"
+                    android:text="@string/_360_days"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
                     android:background="@drawable/blue_gradient"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24"
+                    app:drawableStartCompat="@drawable/vip_icon" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -282,7 +282,7 @@
                     android:background="@color/black"/>
                 <TextView
                     android:layout_width="match_parent"
-                    android:text="800 VND/day \n Get 100 coins instantly \n Get 6 coins daily"
+                    android:text="@string/coin_360_days"
                     android:layout_height="wrap_content"/>
 
             </LinearLayout>
