--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,40 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Mobile" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">#1a237e</item> <!-- dark blue -->
+        <item name="colorPrimaryVariant">#121b40</item> <!-- darker blue -->
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#7986cb</item> <!-- light blue -->
+        <item name="colorSecondaryVariant">#303f9f</item> <!-- darker light blue -->
+        <item name="colorOnSecondary">@color/white</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="actionBarStyle">@style/MyActionBar</item>
+
+        <item name="colorOnBackground">@color/white</item>
+
+        <item name="android:textViewStyle">@style/AlegreyTextViewStyle</item>
+        <item name="android:editTextStyle">@style/oldstandar_regularEditTextStyle</item>
+    </style>
+
+    <style name="AlegreyTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/alegrey</item>
+    </style>
+
+    <style name="oldstandar_regularEditTextStyle" parent="android:Widget.EditText">
+        <item name="android:fontFamily">@font/oldstandar_regular</item>
+    </style>
+
+    <style name="RoundedCorner" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">10dp</item>
+    </style>
+
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@drawable/brown_gradient</item>
+        <!-- Support library compatibility -->
+        <item name="background">@drawable/brown_gradient</item>
     </style>
 </resources>
