--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="actionBarStyle">@style/MyActionBar</item>
 
+        <item name="colorOnBackground">@color/black</item>
+
         <item name="android:textViewStyle">@style/AlegreyTextViewStyle</item>
         <item name="android:editTextStyle">@style/oldstandar_regularEditTextStyle</item>
     </style>
